When /JBIG2Decode filter takes /.jbig2globalctx parameter and retains a pointer to it, the filter must not be allocated in global memory if the parameter is local. Bug 690308.

DIFFERENCES:
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@9514 a1074d23-0009-0410-80fe-cf8c14f379e6